Add agent tests